EC2/sg.tf
resource "aws_security_group" "example" {
  name_prefix = format("%s-%s-%s-ec2-sg", var.common_tags["AssetID"], var.common_tags["Environment"], var.common_tags["Project"]) 
  description = "Example security group"

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Custom Application"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1" # -1 means all protocols
    cidr_blocks = ["0.0.0.0/0"]
  }

   tags = merge(var.common_tags, {
   Name = format("%s-%s-%s-ec2-sg", var.common_tags["AssetID"], var.common_tags["Environment"], var.common_tags["Project"]) 
})
}
